refs #190 Tweak other misc codes
- Add comments
- Delete the debug script for scraping
- Show image's detail with modal dialog in 'debug_illust_detection' template

--- a/app/views/delivered_images/show.html.erb
+++ b/app/views/delivered_images/show.html.erb
@@ -1,6 +1,6 @@
 <% image = @delivered_image.image %>
 
-<p id="notice"><%= notice %></p>
+<p id="notice"><%# notice %></p>
 <%= link_to 'Back', :back %>
 
 <p>
