refs #72 Update the view with oauth links

--- a/app/views/pages/signup_with_password.html.erb
+++ b/app/views/pages/signup_with_password.html.erb
@@ -1,8 +1,8 @@
 <div class="wrapper-oauth">
   <div class="btn-group-vertical btn-group-oauth">
     <%= button_group do %>
-      <%= bs_button_to 'Facebookでアカウント作成', '/', class: "btn btn-default btn-block" %><br>
-      <%= bs_button_to 'Twitterでアカウント作成', 'user_omniauth_authorize_path(:twitter)', class: "btn btn-default btn-block" %><br>
+      <%= bs_button_to 'Facebookでアカウント作成', user_omniauth_authorize_path(:facebook), class: "btn btn-default btn-block" %><br>
+      <%= bs_button_to 'Twitterでアカウント作成', user_omniauth_authorize_path(:twitter), class: "btn btn-default btn-block" %><br>
       <%= bs_button_to 'Pinterestでアカウント作成', '/', class: "btn btn-default btn-block" %><br>
       <%= bs_button_to 'メールアドレスでアカウント作成', '/sign_up', class: "btn btn-default btn-block" %><br>
     <% end %>
