--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -1,7 +1,7 @@
 <%= javascript_include_tag 'users_home' %>
 <%= javascript_include_tag 'core' %>
 <%= render 'shared/modal_image' %>
-<%= render 'shared/modal_board' %>
+<%# render 'shared/modal_board' %>
 
 <p>
   「好みの設定」=>「登録ワード一覧」からタグを登録すると１分弱で抽出画像がホーム画面に表示されます。<br>
@@ -20,7 +20,7 @@
 
 <div class="wrap">
 
-  <% @delivered_images.each do |delivered_image| %>
+  <% @delivered_images.each_with_index do |delivered_image, index| %>
     <% image = delivered_image.image %>
     <% next if delivered_image.avoided %>
 
@@ -33,7 +33,9 @@
         <br>
         <div class="favored">
           <div class="id"><%= delivered_image.id %></div>
-          <%= bs_button_to 'Clip', { controller: 'image_boards', action: 'boards', :remote => true, image: delivered_image.id, 'data-toggle' => "modal", 'data-target' => '#modal-board', class: 'btn-default' } %>
+          <%= bs_button_to 'Clip', { controller: 'image_boards', action: 'boards', remote: true, image: delivered_image.id, id: "popover-board#{index}", class: 'popover-board btn-default' }, 'data-toggle' => "popover", 'data-placement'=>'bottom', 'data-container'=> 'body', id: "popover-board#{index}" %>
+          <%# button_tag 'Clip', 'data-toggle' => 'popover', 'data-container'=> 'body', 'data-content' => "#{render partial: 'shared/popover_board', locals: { image: delivered_image, image_board: ImageBoard.new }}", 'data-placement'=>'bottom', class: 'btn btn-default popover-board' %>
+          <%# button_tag 'Clip', 'data-toggle' => 'popover', 'data-container'=> 'body', 'data-placement'=>'bottom', 'data-content' => 'start', class: 'btn btn-default popover-board' %>
         </div>
         <%= bs_button_to 'Hide', avoid_delivered_image_path(delivered_image), method: :put, class: 'btn-default' %>
 
