refs #192 Fix a problem of popovers that it doesn't render html correctly in the second time
Initialize it properly in 'boards' template.

--- a/app/views/image_boards/_boards.js.erb
+++ b/app/views/image_boards/_boards.js.erb
@@ -1,7 +1,6 @@
 //= require 'modal_boards'
 
-console.log('AJAXing');
-//console.log("<%= @id %>");
+console.log('AJAXing: '+"<%= @id %>");
 selector = "#" + "<%= @id.to_s %>";//"#popover-board"+
 //console.log(selector);
 
@@ -14,6 +13,13 @@ selector = "#" + "<%= @id.to_s %>";//"#popover-board"+
   content: "<%= escape_javascript(render partial: 'shared/popover_board', locals: { image: @image, image_board: @board, html: @id }) %>"
 });*/
 //$(selector).data('bs.popover').tip().html("<%= escape_javascript(render partial: 'shared/popover_board', locals: { image: @image, image_board: @board, html: @id }) %>");
-$(selector).popover({ html: true });
-$(selector).data('bs.popover').options.content = "<%= escape_javascript(render partial: 'shared/popover_board', locals: { image: @image, image_board: @board, html: @id }) %>";
-$(selector).popover('show');
+
+$(selector).popover('destroy');
+$(selector).popover({
+  html: true,
+  content: "<%= escape_javascript(render partial: 'shared/popover_board', locals: { image: @image, image_board: @board, html: @id }) %>",
+  container: 'body'
+}).popover('show');
+console.log($(selector).data('bs.popover').options.content);
+//$(selector).data('bs.popover').options.content = "<%= escape_javascript(render partial: 'shared/popover_board', locals: { image: @image, image_board: @board, html: @id }) %>";
+//$(selector).popover('show');
