refs #192 Fix the header link bug
- Disable sorting by posted_at in deliver module temporarily

--- a/app/views/shared/_boards.html.erb
+++ b/app/views/shared/_boards.html.erb
@@ -6,6 +6,7 @@
   <div class="modal-content">
     <div class="modal-body modal-board">
       <div class="id"><%= image.id %></div>
+      <div class="html-id"<%= html %>></div>
       <%= bootstrap_form_for image_board, remote: true, class: 'new_board' do |f| %>
         <%= f.text_field :name, layout: :default, class: 'new_board_input' %>
         <%= f.submit 'New board', class: "btn btn-primary" %>
