--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -25,7 +25,7 @@
         <%= navbar_item 'うpされた嗜好画像一覧', target_images_path %>
         <%= navbar_item 'イラスト判定のデバッグを行う', debug_illust_detection_users_path %>
         <%= navbar_item 'トップページ', '/' %>
-        <%= navbar_item 'Resque', '/resque_web/overview#show' %>
+        <%= navbar_item 'Resque', '/resque_web/overview' %>
       <% end %>
     <% end %>
 
