Uninclude users.css in popover_board partial

--- a/app/views/shared/_popover_board.html.erb
+++ b/app/views/shared/_popover_board.html.erb
@@ -1,5 +1,5 @@
 <%= javascript_include_tag 'modal_board' %>
-<%= stylesheet_link_tag 'users' %>
+<%# stylesheet_link_tag 'users' %>
 
 <button id="popovercloseid" type="button" class="close">&times;</button>
 
