refs #209 Fix stylesheets
- Add 'no-touch' class to the body to enable the css animation
- Split bootstrap buttons in each titleBox div

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -27,3 +27,11 @@
 .favored_board {
   background-color: #5B9B9B;
 }
+.image-buttons {
+  text-align: right;
+}
+.blocks .btn-default {
+    //padding: 24px 12px;
+    margin: 0 5px;
+    border-radius: 0;
+}
