--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <!-- tells mobile browsers to not scale the page by default -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-<body>
+<body class="no-touch">
 
 <%= render 'shared/header' if signed_in? %>
 
