--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -65,7 +65,7 @@ body {
    bottom: 0;
    left: 0;
    right: 0;
-   margin-bottom: -100px;
+   margin-bottom: 0px;//-100px;
    background: #000;
    background: rgba(0, 0, 0, 0.5);
    color: #FFF;
