--- a/app/views/favored_images/_favored_image.html.erb
+++ b/app/views/favored_images/_favored_image.html.erb
@@ -18,3 +18,22 @@
   <%= bytes_to_kilobytes(@favored_image.data.size) %> KB<br>
   <%= bytes_to_megabytes(@favored_image.data.size) %> MB<br>
 </p>
+
+
+<h2>Debug:</h2>
+<table>
+  <thead>
+    <tr>
+      <th align="left">id of favored_image</th>
+      <td><%= @favored_image.id %></td>
+    </tr>
+    <tr>
+      <th align="left">id of delivered_image</th>
+      <td><%= @favored_image.delivered_image.id %></td>
+    </tr>
+    <tr>
+      <th align="left">raw image size</th>
+      <td><%= @favored_image.data.size if @favored_image.data %></td>
+    </tr>
+  </thead>
+</table>
