--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -12,6 +12,8 @@
     <div class="input-group date" style="width: 200px;" align="right">
       <input type="text" class="form-control" disabled><span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
     </div>
+    <li role="presentation" class="divider"></li>
+    <li><%= link_to '投稿日時順にする', home_users_path(sort: true) %></li>
   <% end %>
 
 </p>
