refs #209 Fix button layout in 'signed_in' template
- Disable scraping with name_english temporarily

--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -65,22 +65,24 @@ body {
    bottom: 0;
    left: 0;
    right: 0;
-   margin-bottom: 0px;//-100px;
+   margin-bottom: 0px;
    background: #000;
    background: rgba(0, 0, 0, 0.5);
    color: #FFF;
    padding: 10px;
    //text-align: center;
-   -webkit-transition: all 0.3s ease-out;
+   /*-webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
-   transition: all 0.3s ease-out;
+   transition: all 0.3s ease-out;*/
 }
 .title {
   text-align: center;
 }
 body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleBox {
    margin-bottom: 0;
+   color: #FFF;
+   visibility: visible;
 }
 
 @media only screen and (max-width : 480px) {
