--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -61,13 +61,16 @@ body {
    width: 100%;
 }
 .boxInner .titleBox {
+//.titleBox {
    position: absolute;
-   bottom: 0;
+   visibility: hidden;
+   top: 30px;
+   //bottom: 0;
    left: 0;
-   right: 0;
+   right: -10px;
    margin-bottom: 0px;
-   background: #000;
-   background: rgba(0, 0, 0, 0.5);
+   //background: #000;
+   //background: rgba(0, 0, 0, 0.5);
    color: #FFF;
    padding: 10px;
    //text-align: center;
@@ -78,12 +81,29 @@ body {
 }
 .title {
   text-align: center;
+  position: absolute;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   margin-bottom: 0px;
+   background: #000;
+   background: rgba(0, 0, 0, 0.5);
+   color: #FFF;
+   padding: 10px;
 }
+/**/
+//body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleBox {
 body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleBox {
    margin-bottom: 0;
    color: #FFF;
    visibility: visible;
 }
+body.no-touch .boxInner.hovered .titleBox, body.touch .boxInner.touchFocus .titleBox {
+   margin-bottom: 0;
+   color: #FFF;
+   visibility: visible;
+}
+
 
 @media only screen and (max-width : 480px) {
    /* Smartphone view: 1 tile */
