--- a/app/views/target_words/search.html.erb
+++ b/app/views/target_words/search.html.erb
@@ -4,7 +4,7 @@
   <%= f.label :name_display_cont, 'キャラクタ名' %>
   <div class="row">
     <div class="col-lg-2">
-      <%= f.text_field :name_display_cont, class: "form-control" %>
+      <%= f.text_field :name_display_or_name_or_name_english_or_titles_name_or_titles_name_english_cont, class: "form-control" %>
 
     </div>
   </div>
@@ -19,6 +19,7 @@
       <th>Name</th>
       <th>Name_en</th>
       <th>Title</th>
+      <th>Title_en</th>
     </tr>
   </thead>
 
@@ -28,6 +29,7 @@
         <td><%= link_to person.name_display, { action: 'create', id: person.id, target_word: { word: person.name_display }}, method: :post %></td>
         <td><%= person.name_english %></td>
         <td><%= person.titles.first.name if not person.titles.empty? %></td>
+        <td><%= person.titles.first.name_english if not person.titles.empty? %></td>
       </tr>
     <% end %>
   </tbody>
