refs #229 Organize view codes

--- a/app/views/target_words/search.html.erb
+++ b/app/views/target_words/search.html.erb
@@ -4,7 +4,9 @@
   <%= f.label :name_display_cont, 'キャラクタ名' %>
   <div class="row">
     <div class="col-lg-2">
-      <%= f.text_field :name_display_or_name_or_name_english_or_titles_name_or_titles_name_english_cont, class: "form-control" %>
+      <%# f.text_field :name_display_or_name_or_name_english_or_titles_name_or_titles_name_english_cont, class: "form-control" %>
+      <%# f.text_field :name_or_name_or_name_english_or_titles_name_cont, class: "form-control" %>
+      <%= f.text_field :titles_name_or_titles_name_english_or_name_or_name_or_name_english_or_name_display_cont, class: "form-control" %>
 
     </div>
   </div>
