--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -1,7 +1,7 @@
 <%= javascript_include_tag 'users_home' %>
 <%= javascript_include_tag 'core' %>
+<%= stylesheet_link_tag 'users' %>
 <%= render 'shared/modal_image' %>
-<%# render 'shared/modal_board' %>
 
 <p>
   「好みの設定」=>「登録ワード一覧」からタグを登録すると１分弱で抽出画像がホーム画面に表示されます。<br>
@@ -15,14 +15,11 @@
     <li role="presentation" class="divider"></li>
     <li><%= link_to '投稿日時順にする', home_users_path(sort: true) %></li>
   <% end %>
-
 </p>
-
 
 <%= paginate @delivered_images %>
 
 <div class="wrap">
-
   <% @delivered_images.each_with_index do |delivered_image, index| %>
     <% image = delivered_image.image %>
     <% next if delivered_image.avoided %>
@@ -32,8 +29,6 @@
         <%= get_jst_string(delivered_image.created_at) + '配信' %>
         <br>
         <%= get_jst_string(image.posted_at) + '投稿' %>
-
-
         <%= link_to image_tag(image.data.url(:thumb)), { controller: 'delivered_images', action: 'show', id: delivered_image.id.to_s, remote: true, 'data-toggle' => "modal", 'data-target' => '#modal-image' } %>
 
         <div class="titleBox">
@@ -41,18 +36,18 @@
 
           <%= button_group class: 'pull-right blocks' do %>
             <%= bs_button_to 'Clip', { controller: 'image_boards', action: 'boards', remote: true, image: delivered_image.id, id: "popover-board#{delivered_image.id}", class: 'popover-board btn-info btn-sm' }, 'data-toggle' => "popover", 'data-placement'=>'bottom', 'data-container'=> 'body', id: "popover-board#{delivered_image.id}" %>
-            <!--<div class="favored"></div>-->
+
             <%= bs_button_to 'Hide', avoid_delivered_image_path(delivered_image), method: :put, class: 'btn-default btn-sm' %>
              <%= bs_button_to 'Show', { controller: 'delivered_images', action: 'show', id: delivered_image.id.to_s, remote: true, 'data-toggle' => "modal", 'data-target' => '#modal-image' }, class: 'btn-default btn-sm' %>
           <% end %>
           <br />
         </div>
-        <div class="title"><%= image.title.to_s %></div>
+        <div class="title">
+          <%= image.title.to_s %><br />
+        </div>
 
       </div>
     </div>
-
-
   <% end %>
 </div>
 
