--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -21,8 +21,9 @@
 
 <div class="wrap">
   <% @delivered_images.each_with_index do |delivered_image, index| %>
-    <% image = delivered_image.image %>
-    <% next if delivered_image.avoided %>
+    <%# image = delivered_image.image %>
+    <% image = delivered_image %>
+    <%# next if delivered_image.avoided %>
 
     <div class="box">
       <div class="boxInner">
