refs #239 Fix users_helper related specs

--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -30,7 +30,7 @@
         <%= get_jst_string(delivered_image.created_at) + '配信' %>
         <br>
         <%= get_jst_string(image.posted_at) + '投稿' %>
-        <%= render_delivered_image(delivered_image) %>
+        <%= render_image(delivered_image) %>
 
         <div class="titleBox">
           <div class="id"><%= delivered_image.id %></div>
