refs #240 Add tutorial page

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,6 +18,7 @@
       <%= navbar_dropdown 'DEBUG' do %>
         <%= navbar_item '抽出画像一覧', images_path %>
         <%= navbar_item 'イラスト判定のデバッグを行う', debug_illust_detection_users_path %>
+        <%= navbar_item '使い方', '/tutorial' %>
         <%= navbar_item 'トップページ', '/' %>
         <%= navbar_item 'Resque', '/resque_web/overview' %>
       <% end %>
