refs #220 Change application.rb temporarily

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,7 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "bootstrap/glyphicons";
+//@import "bootstrap/glyphicons";
 
 #footer {
   clear:  left;
