refs #241 Fix the time string format
- Organize css files
- Fix some styles
- Use English at the home page

--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -10,7 +10,7 @@
 
 // アバター変更フォーム
 .modal.modal-avatar {
-  // TODO: hard codingを止める
+  // TODO: hard codingを解消する
   position: fixed;
   top: 3%;
   left: -68.2%;//-56.7%;
