--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -65,9 +65,9 @@ body {
 .boxInner .titleBox {
    position: absolute;
    visibility: hidden;
-   top: 30px;
-   left: 0;
-   right: -10px;
+   top: 0px;//30px;
+   left: 0px;
+   right: 0px;//-10px;
    margin-bottom: 0px;
    color: #FFF;
    padding: 10px;
