--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,15 +6,15 @@
     <%= navbar_group class: 'User', id: 'menu' do %>
       <%= navbar_dropdown 'User' do %>
         <li>
-          <%= link_to 'プロフィール画像を変更する', new_avatar_users_path, { :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window', class: 'dropdown-user' } %>
+          <%= link_to 'Change avatar image', new_avatar_users_path, { :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window', class: 'dropdown-user' } %>
         </li>
         <%= navbar_dropdown_divider %>
-        <%= navbar_item 'ログアウト', destroy_user_session_path %>
+        <%= navbar_item 'Log out', destroy_user_session_path %>
       <% end %>
 
       <%= navbar_item 'Home', home_users_path %>
       <%= navbar_item 'Boards', show_favored_images_users_path %>
-      <%= navbar_item '好みの設定', show_target_words_users_path %>
+      <%= navbar_item 'Preferences', show_target_words_users_path %>
       <%= navbar_dropdown 'DEBUG' do %>
         <%= navbar_item '抽出画像一覧', images_path %>
         <%= navbar_item 'イラスト判定のデバッグを行う', debug_illust_detection_users_path %>
