--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -4,7 +4,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 // デバッグ用画面の画像表示に使用
-// from http://goo.gl/zsi5mT
+// from: http://goo.gl/zsi5mT
 ul.boxline {
     padding-left: 0!important;
     text-align: left;
@@ -34,7 +34,7 @@ ul.boxline li img {
 
 
 // Home画面の画像整列に使用
-// from http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/
+// from: http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/
 body {
    margin: 0;
    padding: 0;
@@ -65,9 +65,9 @@ body {
 .boxInner .titleBox {
    position: absolute;
    visibility: hidden;
-   top: 0px;//30px;
+   top: 0px;
    left: 0px;
-   right: 0px;//-10px;
+   right: 0px;
    margin-bottom: 0px;
    color: #FFF;
    padding: 10px;
