--- a/app/views/users/signed_in.html.erb
+++ b/app/views/users/signed_in.html.erb
@@ -40,12 +40,12 @@
 
         <div class="title">
           <%= image.title.to_s %><br />
-          <div class="image_label">
-            <%= bs_label image.target_words.first.word, :default, class: 'label label-default' %>
+          <div class="image-tag">
+            <%# bs_label image.target_words.first.word, :default, class: 'label label-default' %>
           </div>
-          <div class="time_string">
-            <%= "created at #{get_jst_string(delivered_image.created_at)}" %><br />
-            <%= "posted at #{get_jst_string(image.posted_at)}" %>
+          <div class="time-string">
+            <%= "CA: #{get_jst_string(delivered_image.created_at)}" %><br />
+            <%= "PA: #{get_jst_string(image.posted_at)}" %>
           </div>
         </div>
 
