--- a/app/views/favored_images/_favored_image.html.erb
+++ b/app/views/favored_images/_favored_image.html.erb
@@ -1,12 +1,14 @@
+<!-- Called from the favored_images controller indirectly -->
+
 <%= render partial: 'shared/render_image', locals: { image: @favored_image } %>
 <p>
   <strong>Title:</strong>
-  <%= @favored_image.title %>
+  <%= @favored_image.title unless @favored_image.title.nil? %>
 </p>
 
 <p>
   <strong>Caption:</strong>
-  <%= @favored_image.caption.html_safe %>
+  <%= @favored_image.caption.html_safe unless @favored_image.caption.nil? %>
 </p>
 
 <p>
@@ -28,8 +30,8 @@
       <td><%= @favored_image.id %></td>
     </tr>
     <tr>
-      <th align="left">id of delivered_image</th>
-      <td><%= @favored_image.delivered_image.id %></td>
+      <th align="left">id of image</th>
+      <td><%= @favored_image.image.id %></td>
     </tr>
     <tr>
       <th align="left">raw image size</th>
