--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -4,7 +4,7 @@
       <div class="modal-body">
         <%= bootstrap_form_tag url: { controller: '/users', action: 'create_avatar', id: current_user.id } do |f| %>
           <%= f.file_field :avatar, layout: :default %>
-          <%= f.submit '決定' %>
+          <%= f.submit 'Submit' %>
         <% end %>
       </div>
     </div>
