--- a/app/views/shared/_new_avatar.html.erb
+++ b/app/views/shared/_new_avatar.html.erb
@@ -2,7 +2,7 @@
   <div class="modal-content">
     <%= bootstrap_form_tag url: { controller: 'users', action: 'create_avatar', id: current_user.id } do |f| %>
       <%= f.file_field :avatar, layout: :default %>
-      <%= f.submit '決定' %>
+      <%= f.submit 'Submit' %>
     <% end %>
   </div>
 </div>
