--- a/app/views/shared/_popover_board.html.erb
+++ b/app/views/shared/_popover_board.html.erb
@@ -1,21 +1,23 @@
 <%= javascript_include_tag 'modal_board' %>
-<%# stylesheet_link_tag 'users' %>
 
+
+<!-- close buttonを機能させる
 <button id="popovercloseid" type="button" class="close">&times;</button>
+-->
 
+<!-- new boardを作るフォーム -->
 <div class="id"><%= image.id %></div>
-<div class="html-id"><%= html %></div>
+<div class="html-id"><%# html %></div>
 <%= bootstrap_form_for image_board, remote: true, url: { controller: 'image_boards', action: 'create' , image: image.id, html_id: html }, class: 'new_board' do |f| %>
-  <%= f.text_field :name, layout: :default, placeholder: '新しいボードを作成', class: 'new_board_input' %>
+  <%= f.text_field :name, layout: :default, placeholder: 'Enter a board name', class: 'new_board_input' %>
   <%= f.submit 'New board', class: "btn btn-primary" %>
 <% end %>
 <br />
 
+<!-- 既に存在するboardへの画像追加リンクを描画 -->
 <% current_user.image_boards.each do |board| %>
-  <!--<li class="clip_button btn btn-default btn-group-justified" >-->
   <% existed = check_existed(board.id, image.id) %>
   <%= button_group do %>
-    <%# bs_button_to board.name.to_s, { controller: 'delivered_images', action: 'favor', id: image.id, board: board.name, remote: true, html_id: html }, method: :put, class: "btn btn-default user_boards #{existed ? 'favored_board' : ''}" %>
     <%= bs_button_to board.name.to_s, { controller: 'images', action: 'favor', id: image.id, board: board.name, remote: true, html_id: html }, method: :put, class: "btn btn-default user_boards #{existed ? 'favored_board' : ''}" %>
   <% end %>
 <% end %>
